# routes/routes.go
@@ -3,7 +3,9 @@ package routes
 import (
 	"sample/account"
 	_ "sample/docs"
+	"sample/function"
 	"sample/middleware/utils/encryption"
+	"sample/secret"
 
 	swagger "github.com/arsmn/fiber-swagger/v2"
 	"github.com/gofiber/fiber/v2"
@@ -12,11 +14,12 @@ import (
 func SetupRoutes(app *fiber.App) {
 
 	//swagger
-	app.Get("/goroutine_docs/*", swagger.HandlerDefault)
+	app.Get("/payment_docs/*", swagger.HandlerDefault)
 
 	auth := app.Group("/auth")
-	auth.Post("/register",account.SetupAccount)
-	auth.Post("/signup", account.SetupAccount)
 	auth.Post("/encrypt", encryption.EncryptConn)
+	auth.Post("/register/teacher", account.SetupTeacherAccount)
+	auth.Post("/register/student", account.SetupStudentAccount)
+	auth.Get("/protected", secret.Authenticate, function.ProtectedEndpoint)
 
 }
