# struct/error/error.go
@@ -1,9 +1,10 @@
 package errors
 
 type ResponseModel struct {
-	RetCode string      `json:"retCode"`
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
+	RetCode   string      `json:"retCode"`
+	Message   string      `json:"message"`
+	IsSuccess bool        `json:"isSuccess"`
+	Data      interface{} `json:"data"`
 }
 
 type ErrorModel struct {
